# CanadianDish

./: README.md
CanadianDish/: LICENSE.txt  course.py  courseSeason.py  demo.ipynb  ingredient.py  ingredients.py  main.py  pdf.py  seasonal.py  setup.cfg
CanadianDish.egg-info/: PKG-INFO  SOURCES.txt
CanadianDish/CanadianDish/: course.py  pdf.py  recipe.py  seasonal.py
CanadianDish/CanadianDish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
