[metadata]
name = CanadianDish
version = 0.0.1
author = Hrytsiv Maksym
author_email = makshrytsiv@gmail.com
description = For getting a random Canadian Recipe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heliome/CanadianDish
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[oprions]
packages = find:
include_package_data = True